# stock-market-scraper

./: Cargo.toml  README.md
src/: db.rs  get_tickers.rs  main.rs  quote.rs
