[package]
name = "stock_market_scraper"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yahoo_finance_api = "1.2.2"
chrono = "0.4.19"
tokio-test = "0.4.2"
reqwest = "0.11.10"
tokio = { version = "1.8.2", features = ["full"] }
scraper = "0.13.0"
html_parser = "0.6.3"
tokio-postgres = "0.7.6"